# -EDD-Proyecto1_2019

./: README.md  list.cpp  list.h  node.cpp  node.h  practica1.cpp  practica1.h
Backend REST/: node.cpp
Frontend MatrixTemplate/html/ltr/: authentication-login.html  form-basic.html  index.html  index.sublime-workspace  login.js
proyecto1/: CMakeLists.txt  arbol.dot
proyecto1/proyecto1/: CMakeLists.txt
proyecto1/proyecto1/src/: list.cpp  list.h  node.cpp  node.h  proyecto1.cpp  proyecto1.h
