cmake_minimum_required(VERSION 2.6)

project (proyecto1 CXX)

set(PROYECTO1_HEADERS proyecto1.h node.h)

set(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
set(PROYECTO1_CODEGEN_DIR "${PROJECT_BINARY_DIR}/codegen")

PREPEND(PROYECTO1_HEADERS_PATHS ${PROJECT_SOURCE_DIR} ${PROYECTO1_HEADERS})

CODEGEN_FILES(PROYECTO1_CODEGEN_SOURCES ${PROYECTO1_CODEGEN_DIR} ${PROYECTO1_HEADERS})

add_custom_command(OUTPUT ${PROYECTO1_CODEGEN_SOURCES}
    COMMAND ${NGREST_BIN_PATH}ngrestcg -i "${PROJECT_SOURCE_DIR}" -o ${PROYECTO1_CODEGEN_DIR} -t service ${PROYECTO1_HEADERS}
    DEPENDS ${PROYECTO1_HEADERS_PATHS}
)

file(GLOB PROYECTO1_SOURCES ${PROJECT_SOURCE_DIR}/*.cpp)

list(APPEND PROYECTO1_SOURCES ${PROYECTO1_CODEGEN_SOURCES})

include_directories(${PROJECT_SOURCE_DIR} $ENV{NGREST_EXT_INCLUDES})

add_library(proyecto1 MODULE ${PROYECTO1_SOURCES})

set_target_properties(proyecto1 PROPERTIES PREFIX "")
set_target_properties(proyecto1 PROPERTIES
    LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SERVICES_DIR}"
)

target_link_libraries(proyecto1 ngrestutils ngrestcommon ngrestjson ngrestengine $ENV{NGREST_EXT_LIBS})
